# experiment-atomic-primops-with-fhpc

./: experiment-atomic-primops-with-fhpc.cabal
src/Experiment/: AtomicOps.hs
test/: Spec.hs
